2006-06-16  Jeremy Katz  <katzj@redhat.com>

	* pykickstart/parser.py (KickstartHandlers.doMethod): Handle nfs --opts

2006-06-06  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec:  Fix BuildRequires (#194156).

2006-05-25  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

2006-05-24  Chris Lumens  <clumens@redhat.com>

	* pykickstart/writer.py (KickstartWriter):  Change order of LVM-related
	functions (#193073).

2006-05-23  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec:  Require urlgrabber now.

	* po/*:  Update translation files.

	* pykickstart/parser.py (KickstartParser.handleCommand):  Return a
	more useful error message on unknown command.

	* pykickstart/writer.py (KickstartWriter.doLogicalVolume):  Fix typo.

	* validator/ksvalidator:  Accept a URL in addition to a file name.

2006-05-23  Chris Lumens  <clumens@redhat.com>

	* pykickstart/writer.py (KickstartWriter.doPackages):  Don't write out
	an empty packages section, since we may want this step to be
	interactive (#192851).

2006-05-23  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

	* pykickstart/writer.py (KickstartWriter.doFirewall):  Rename --ports
	to match the parser.

2006-05-17  Peter Jones  <pjones@redhat.com>

	* pykickstart/parser.py: Add "multipath" command and doMultiPath
	handler.
	* pykickstart/data.py: Add kickstartMpPathData and
	KickstartMultiPathData objects to handle multipath info, as well as
	KickstartData.mpaths .
	* pykickstart/writer.py: add doMultiPath
	* docs/programmers-guide: add completely useless documentation for
	multipath kickstart objects.

2006-05-15  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

	* pykickstart/data.py (KickstartNetworkData):  Add MTU (#191328).
	* pykickstart/parser.py (KickstartHandlers.doNetwork):  Likewise.
	* pykickstart/writer.py (KickstartWriter.doNetwork):  Likweise.

2006-05-10  Chris Lumens  <clumens@redhat.com>
